--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,10 @@
 
 .home {
 
+  @media @phone {
+    margin-top: 13rem;
+  }
+
   .intro {
 
     img {
